# visual-git-app

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  PRODUCT.md  PROGRESS.md  PROMPTS.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TASKS.md  TESTING.md  eslint.config.js  index.html  package-lock.json  package.json
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/app/: graph_service.rs  mod.rs  repository_service.rs
src-tauri/src/commands/: graph_commands.rs  mod.rs  repository_commands.rs
src-tauri/src/git/: git2_provider.rs  github_clone.rs  loose_object_parser.rs  mod.rs  provider.rs  repository_validator.rs
src-tauri/src/graph/: graph_builder.rs
src-tauri/src/models/: branch.rs  commit.rs  compare.rs  diff.rs  graph.rs  internals.rs  mod.rs  repository.rs  tag.rs
src/app/: App.tsx
src/components/branches/: BranchList.tsx  TagList.tsx
src/components/commit/: CommitDetailsPanel.tsx
src/components/graph/: CommitEdge.tsx  CommitGraph.tsx  CommitNode.tsx  GraphToolbar.tsx  GraphViewport.tsx
src/components/internals/: GitInternalsPanel.tsx
src/components/layout/: AppShell.tsx  DetailsPanel.tsx  GraphArea.tsx  Sidebar.tsx  TopBar.tsx
src/components/repository/: GithubRepositoryForm.tsx  OpenRepositoryButton.tsx  (+2 more)
src/stores/: commitDetailsStore.ts  graphStore.ts  repositoryStore.ts  uiStore.ts
src/types/: git.ts  graph.ts  repository.ts
src/utils/: githubUrl.test.ts  githubUrl.ts  graphSearch.test.ts  graphSearch.ts
(+2 files in other folders)
